// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Mixpanel's trackEvent destination action: all fields 1`] = `
Array [
  Object {
    "event": "pNBru",
    "properties": Object {
      "$anon_id": "pNBru",
      "$app_build_number": "pNBru",
      "$app_name": "pNBru",
      "$app_namespace": "pNBru",
      "$app_version_string": "pNBru",
      "$bluetooth_enabled": true,
      "$browser": "",
      "$carrier": "pNBru",
      "$cellular_enabled": true,
      "$current_url": "pNBru",
      "$device": "pNBru",
      "$device_id": "pNBru",
      "$device_name": "pNBru",
      "$device_type": "pNBru",
      "$group_id": "pNBru",
      "$identified_id": "pNBru",
      "$insert_id": "pNBru",
      "$ios_ifa": "pNBru",
      "$lib_version": "pNBru",
      "$locale": "pNBru",
      "$manufacturer": "pNBru",
      "$model": "pNBru",
      "$os": "pNBru",
      "$os_version": "pNBru",
      "$referrer": "pNBru",
      "$screen_density": -83997876740423.69,
      "$screen_height": -83997876740423.69,
      "$screen_width": -83997876740423.69,
      "$source": "segment",
      "$user_id": "pNBru",
      "$wifi_enabled": true,
      "distinct_id": "pNBru",
      "id": "pNBru",
      "ip": "pNBru",
      "mp_country_code": "pNBru",
      "mp_lib": "Segment: pNBru",
      "segment_source_name": "pNBru",
      "testType": "pNBru",
      "time": 1612137600000,
      "utm_campaign": "pNBru",
      "utm_content": "pNBru",
      "utm_medium": "pNBru",
      "utm_source": "pNBru",
      "utm_term": "pNBru",
    },
  },
]
`;

exports[`Testing snapshot for Mixpanel's trackEvent destination action: required fields 1`] = `
Array [
  Object {
    "event": "pNBru",
    "properties": Object {
      "$anon_id": "pNBru",
      "$device_id": "pNBru",
      "$group_id": "pNBru",
      "$identified_id": "pNBru",
      "$insert_id": "pNBru",
      "$ios_ifa": "pNBru",
      "$screen_width": -83997876740423.69,
      "$source": "segment",
      "$user_id": "pNBru",
      "distinct_id": "pNBru",
      "id": "pNBru",
      "segment_source_name": "pNBru",
      "time": 1234556,
    },
  },
]
`;
